# google-analytics-mcp

./: .dockerignore  .env  .env.tpl  Dockerfile  README.md  README_docker.md  noxfile.py  pyproject.toml
.github/workflows/: deploy.yaml  generate-tag.yaml  release.yaml
analytics_mcp/: auth.py  coordinator.py  server.py  settings.py
analytics_mcp/tools/: utils.py
analytics_mcp/tools/admin/: info.py
analytics_mcp/tools/reporting/: core.py  metadata.py  realtime.py
chart/: values-dev.yaml  values-prod.yaml  values.yaml
chart/templates/: certificate.yaml  deployment.yaml  ingressroutes.yaml  service.yaml
tests/: server_test.py  utils_test.py
